infrastructure/longhorn/resources/app/networkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: longhorn-system
  namespace: longhorn-system
spec:
  endpointSelector: {}
  ingress:
    - fromEndpoints:
        - {}
    - fromEntities:
        - host
    - fromEntities:
        - remote-node
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: nginx
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: tailscale-operator
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: monitoring
  egress:
    - toEndpoints:
        - {}
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: minio
            app.kubernetes.io/instance: minio
    - toEntities:
        - host
    - toEntities:
        - remote-node
